--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,3 +42,14 @@
 {% endif %}
 
 </html>
+
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
+</head>
+<body>
+  {{ content }}
+</body>
+</html>
+
